...
  /**
   * *********************
   */

  return (
    <TouchableOpacity
      testID='play-button'
      accessibilityLabel='Play button'
      accessibilityHint='Tap to play the media'
      onPress={onPress}
      className={"relative"}
      {...props}
    >
...
