...
    "error_title": "Error",
    "login_title": "Log In",
    "login_to_title": "Log in to",
    "select_user": "Select a user to log in",
    "add_user_to_login": "Add a user to log in",
    "add_user": "Add User",
    "username_placeholder": "Username",
    "password_placeholder": "Password",
    "login_button": "Log In",
    "quick_connect": "Quick Connect",
    "enter_code_to_login": "Enter code {{code}} to login",
    "failed_to_initiate_quick_connect": "Failed to initiate Quick Connect",
    "got_it": "Got It",
    "connection_failed": "Connection Failed",
...
    "there_is_a_server_error": "There is a server error",
    "an_unexpected_error_occured_did_you_enter_the_correct_url": "An unexpected error occurred. Did you enter the server URL correctly?",
    "too_old_server_text": "Unsupported Jellyfin Server Discovered",
    "too_old_server_description": "Please update Jellyfin to the latest version"
  },
  "server": {
    "enter_url_to_jellyfin_server": "Enter the URL to your Jellyfin server",
    "server_url_placeholder": "http(s)://your-server.com",
    "connect_button": "Connect",
    "previous_servers": "Previous Servers",
    "clear_button": "Clear all",
    "swipe_to_remove": "Swipe to remove",
    "search_for_local_servers": "Search for Local Servers",
...
    "next_up": "Next Up",
    "continue_and_next_up": "Continue & Next Up",
    "recently_added_in": "Recently Added in {{libraryName}}",
    "suggested_movies": "Suggested Movies",
    "suggested_episodes": "Suggested Episodes",
    "intro": {
      "welcome_to_streamyfin": "Welcome to Streamyfin",
      "a_free_and_open_source_client_for_jellyfin": "A Free and Open-Source Client for Jellyfin.",
      "features_title": "Features",
      "features_description": "Streamyfin has a bunch of features and integrates with a wide array of software which you can find in the settings menu, these include:",
      "jellyseerr_feature_description": "Connect to your Seerr instance and request movies directly in the app.",
      "downloads_feature_title": "Downloads",
      "downloads_feature_description": "Download movies and tv-shows to view offline. Use either the default method or install the optimize server to download files in the background.",
      "chromecast_feature_description": "Cast movies and tv-shows to your Chromecast devices.",
      "centralised_settings_plugin_title": "Centralised Settings Plugin",
      "centralised_settings_plugin_description": "Configure settings from a centralised location on your Jellyfin server. All client settings for all users will be synced automatically.",
      "done_button": "Done",
      "go_to_settings_button": "Go to Settings",
      "read_more": "Read More"
    },
    "settings": {
      "settings_title": "Settings",
      "log_out_button": "Log Out",
...
