...
              disabled={disabled}
            />
          ))}

          {/* Add Server Button */}
          <TVAddIcon
            testID='add-server-button'
            label={t("server.add_server")}
            onPress={onAddServer}
            hasTVPreferredFocus={!hasServers}
            disabled={disabled}
          />
        </ScrollView>
...
