appId: ${MAESTRO_APP_ID}
name: TVPlaySteamboatWillie
---
- runFlow: tv-simple-flow.yaml
- takeScreenshot:
    path: ${MAESTRO_ARTIFACT_DIR}/07-tv-home-screen
- extendedWaitUntil:
    visible:
      id: "${MAESTRO_STEAMBOAT_WILLIE_ID}"
    timeout: 30000
- tapOn:
    id: "${MAESTRO_STEAMBOAT_WILLIE_ID}"
- extendedWaitUntil:
    visible: "Steamboat Willie"
    timeout: 30000
- extendedWaitUntil:
    visible:
      id: "play-button"
    timeout: 30000
- takeScreenshot:
    path: ${MAESTRO_ARTIFACT_DIR}/08-tv-movie-detail
- tapOn:
    id: "play-button"
- extendedWaitUntil:
    visible:
      id: "video-player"
    timeout: 45000
- takeScreenshot:
    path: ${MAESTRO_ARTIFACT_DIR}/09-tv-playing
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot:
    path: ${MAESTRO_ARTIFACT_DIR}/10-tv-playing-5s
